--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "mytune",
   "version": "1.0.0",
-  "description": "myTune site for Orange mui=\u001b[sic and videos  ",
+  "description": "myTune site for Orange music and videos  ",
   "main": "index.js",
+  "homepage": "https://kkthecompguy.github.io/mytune",
   "scripts": {
+    "deploy": "gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "gh-pages": "^2.0.1"
   },
   "keywords": [
     "myTune"
   ],
-  "author": "Kosam Omollo (\u001b[2~kkthecompguy)",
+  "author": "Kosam Omollo (kkthecompguy)",
   "license": "MIT"
 }
